# django-enforced-choices

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django-enforced-choices-ci.yml
django_enforced_choices/: models.py
django_enforced_choices/fields/: __init__.py  postgres.py
docs/source/: api_fields.rst  api_fields_postgres.rst  api_models.rst  conf.py  getting_started.rst  index.rst  installation.rst  settings.py
